--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1,5 +1,8 @@
-@import "variables";
 @import "base";
+@import "header";
+@import "typography";
+@import "variables";
+
 @import "components/hero";
 
 :root {
