--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1,10 +1,17 @@
-@import "base";
-@import "header";
-@import "typography";
-@import "variables";
+@import "abstracts/functions";
+@import "abstracts/mixins";
+@import "abstracts/variables";
 
+@import "base/animations";
+@import "base/base";
+@import "base/typography";
+@import "base/utilities";
+
+@import "components/button";
+@import "components/images";
 @import "components/hero";
 
-:root {
-  --div-color: red;
-}
+@import "layout/grid";
+@import "layout/header";
+
+@import "pages/home";
