--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -8,8 +8,9 @@
 @import "base/utilities";
 
 @import "components/button";
-@import "components/images";
 @import "components/hero";
+@import "components/images";
+@import "components/map";
 
 @import "layout/grid";
 @import "layout/header";
