--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -12,6 +12,7 @@
 @import "components/images";
 @import "components/map";
 
+@import "layout/footer";
 @import "layout/grid";
 @import "layout/header";
 
