--- a/src/css/base/_typography.scss
+++ b/src/css/base/_typography.scss
@@ -18,7 +18,7 @@ body {
   &--main {
     display: block;
     font-size: 9.6rem;
-    font-weight: 700;
+    font-weight: 900;
     margin-top: 7rem;
     margin-bottom: 6rem;
   }
@@ -48,9 +48,55 @@ body {
   }
 }
 
+.heading-tertiary {
+  color: $color-white;
+  text-transform: normal;
+  backface-visibility: hidden;
+  margin-bottom: 6rem;
+
+  &--main {
+    display: block;
+    font-size: 4.2rem;
+    font-weight: 900;
+    margin-bottom: 5rem;
+  }
+
+  &--sub {
+    display: block;
+    font-size: 1.8rem;
+    font-weight: 400;
+  }
+}
+
 .paragraph {
   font-size: 1.8rem;
   line-height: 1.8;
   font-weight: 400;
   color: $color-anthrazit;
+
+  &__white {
+    font-size: 1.4rem;
+    line-height: 1.8;
+    font-weight: 400;
+    color: $color-white;
+    margin-top: -2rem;
+
+    &--footer {
+      display: block;
+    }
+  }
+}
+
+.link {
+  margin-top: -2rem;
+  &__footer {
+    &--white {
+      font-size: 1.4rem;
+      line-height: 1.8;
+      font-weight: 400;
+      text-decoration: none;
+      color: $color-white;
+      display: block;
+    }
+  }
 }
