--- a/src/css/pages/_home.scss
+++ b/src/css/pages/_home.scss
@@ -1,5 +1,17 @@
 .section-about {
   background-color: $color-white;
   padding: 25rem 10.1rem;
-  margin-top: -20vh;
+  margin-top: -40vh;
+}
+
+.section-map {
+  background-color: $color-white;
+  padding: 0;
+}
+
+.section-footer {
+  background-color: $color-black;
+
+  padding: 10rem;
+  margin: 0;
 }
