--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -10,6 +10,7 @@
 @import "components/button";
 @import "components/hero";
 @import "components/images";
+@import "components/info";
 @import "components/map";
 
 @import "layout/footer";
