--- a/src/css/base/_typography.scss
+++ b/src/css/base/_typography.scss
@@ -58,7 +58,7 @@ body {
     display: block;
     font-size: 4.2rem;
     font-weight: 900;
-    margin-bottom: 5rem;
+    margin-bottom: 6.2rem;
   }
 
   &--sub {
@@ -81,7 +81,26 @@ body {
     color: $color-white;
     margin-top: -2rem;
 
-    &--footer {
+    &--block {
+      display: block;
+    }
+  }
+}
+
+.paragraph {
+  font-size: 1.8rem;
+  line-height: 1.8;
+  font-weight: 400;
+  color: $color-anthrazit;
+
+  &__anthrazit {
+    font-size: 1.4rem;
+    line-height: 1.8;
+    font-weight: 400;
+    color: $color-anthrazit;
+    margin-top: -2rem;
+
+    &--block {
       display: block;
     }
   }
