--- a/src/css/base/_utilities.scss
+++ b/src/css/base/_utilities.scss
@@ -2,6 +2,10 @@
   text-align: center;
 }
 
+.u-margin-bottom-xbig {
+  margin-bottom: 13rem;
+}
+
 .u-margin-bottom-big {
   margin-bottom: 8rem;
 }
