--- a/src/css/pages/_home.scss
+++ b/src/css/pages/_home.scss
@@ -1,17 +1,16 @@
 .section-about {
   background-color: $color-white;
-  padding: 25rem 10.1rem;
-  margin-top: -40vh;
+  padding-top: 5rem;
 }
 
 .section-map {
   background-color: $color-white;
   padding: 0;
+  margin-top: 8rem;
 }
 
 .section-footer {
   background-color: $color-black;
-
   padding: 10rem;
   margin: 0;
 }
