--- a/src/css/base/_typography.scss
+++ b/src/css/base/_typography.scss
@@ -108,7 +108,8 @@ body {
 
 .link {
   margin-top: -2rem;
-  &__footer {
+  &__footer,
+  &__origin {
     &--white {
       font-size: 1.4rem;
       line-height: 1.8;
