--- a/src/css/components/_images.scss
+++ b/src/css/components/_images.scss
@@ -3,7 +3,6 @@
 
   &-about_image {
     position: relative;
-    transition: all 0.2s;
     margin-top: -2rem;
     display: block;
   }
@@ -16,4 +15,21 @@
     object-fit: cover;
     object-position: center;
   }
+}
+
+.image {
+  width: auto;
+  position: absolute;
+  background: #e9e9e9;
+
+  &__explore {
+    position: relative;
+    height: 40rem;
+    object-position: left;
+    display: block;
+  }
+}
+
+.background-color {
+  background-color: $color-grey-light;
 }
