--- a/src/css/pages/_home.scss
+++ b/src/css/pages/_home.scss
@@ -3,9 +3,37 @@
   padding-top: 11rem;
 }
 
+.section-explore {
+  background-color: $color-anthrazit;
+  padding-top: 11rem;
+}
+
+.section-origin {
+  height: 65vh;
+  background-image: linear-gradient(
+      0deg,
+      rgba(0, 0, 0, 0.5),
+      rgba(0, 0, 0, 0.5)
+    ),
+    url(../img/FEND-Coffee-bags-2.png);
+  background-size: cover;
+  background-position: center;
+
+  position: relative;
+
+  &__text-box {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 30rem;
+    transform: translate(-50%, -50%);
+    text-align: center;
+  }
+}
+
 .section-map {
   background-color: $color-white;
-  padding: 0;
+  padding-top: 25rem;
   margin-top: 8rem;
 }
 
