--- a/src/css/pages/_home.scss
+++ b/src/css/pages/_home.scss
@@ -5,7 +5,8 @@
 
 .section-explore {
   background-color: $color-anthrazit;
-  padding-top: 11rem;
+  padding-top: 16rem;
+  padding-bottom: 2rem;
 }
 
 .section-origin {
