--- a/src/css/components/_button.scss
+++ b/src/css/components/_button.scss
@@ -46,6 +46,56 @@
   }
 }
 
+.btn-secondary {
+  &:link,
+  &:visited {
+    color: $color-white;
+    font-weight: 400;
+    text-transform: normal;
+    text-decoration: none;
+    padding: 2.5rem 5rem;
+    display: inline-block;
+    border-radius: 0.5rem;
+    transition: all 0.2s;
+    position: relative;
+    object-position: center;
+    font-size: 1.4rem;
+  }
+
+  &:hover {
+    background-color: $color-button-hover;
+    box-shadow: 0 0.5rem 2rem rgba($color-black, 0.25);
+  }
+
+  &:active {
+    background-color: $color-button-active;
+    box-shadow: 0 0.5rem 2rem rgba($color-black, 0.25);
+  }
+
+  &--border {
+    background-color: none;
+    border: 2px solid $color-white;
+    color: $color-white;
+
+    &::after {
+      background-color: $color-anthrazit;
+    }
+  }
+
+  &::after {
+    content: "";
+    display: inline-block;
+    height: 100%;
+    width: 100%;
+    border-radius: 10rem;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    transition: all 0.4s;
+  }
+}
+
 .btn-text {
   &:link,
   &:visited {
