--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -12,6 +12,7 @@
 @import "components/images";
 @import "components/info";
 @import "components/map";
+@import "components/navigation";
 
 @import "layout/footer";
 @import "layout/grid";
