--- a/src/css/layout/_header.scss
+++ b/src/css/layout/_header.scss
@@ -42,3 +42,35 @@
       brightness(120%) contrast(120%);
   }
 }
+
+.header-cafe {
+  height: 65vh;
+  background-image: linear-gradient(
+      0deg,
+      rgba(0, 0, 0, 0.3),
+      rgba(0, 0, 0, 0.3)
+    ),
+    url(../img/FEND-Coffee-shop.png);
+  background-size: cover;
+  background-position: top;
+
+  position: relative;
+
+  &__logo-box {
+    position: absolute;
+    left: 10rem;
+  }
+
+  &__logo {
+    height: 3.5rem;
+    margin-right: auto;
+  }
+
+  &__text-box {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+  }
+}
