--- a/src/css/pages/_home.scss
+++ b/src/css/pages/_home.scss
@@ -46,6 +46,19 @@
   }
 }
 
+.section-gallery {
+  background-color: $color-white;
+  padding-bottom: 2rem;
+  position: relative;
+
+  &__text-box {
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+  }
+}
+
 .section-map {
   background-color: $color-white;
   padding-top: 25rem;
