fix problems explore section

--- a/src/css/components/_images.scss
+++ b/src/css/components/_images.scss
@@ -29,9 +29,9 @@
 
   &__explore {
     position: relative;
-    height: 40rem;
     object-position: left;
     display: block;
+    max-width: 100%;
   }
 }
 
