--- a/src/css/pages/_home.scss
+++ b/src/css/pages/_home.scss
@@ -50,6 +50,7 @@
   background-color: $color-white;
   padding-bottom: 2rem;
   position: relative;
+  max-width: 100%;
 
   &__text-box {
     position: absolute;
