--- a/src/css/components/_navigation.scss
+++ b/src/css/components/_navigation.scss
@@ -11,10 +11,6 @@
   transition: background-color 0.4s ease-out;
 }
 
-li a {
-  transition: all 0.5s;
-}
-
 .nav-menu {
   text-decoration: none;
   color: $color-white;
@@ -22,6 +18,8 @@ li a {
   font-family: "Roboto", sans-serif;
   font-size: 1.8rem;
   padding: 0 3rem;
+  list-style: none;
+  display: inline;
 }
 
 .link-underline {
@@ -43,6 +41,26 @@ li a {
   }
 
   &:hover:after {
+    width: 100%;
+  }
+}
+
+.link-underlined {
+  position: relative;
+  color: $color-white;
+  text-decoration: none;
+
+  &:after {
+    display: block;
+    position: absolute;
+    left: 0;
+    bottom: -5px;
+    width: 0;
+    height: 1px;
+    background-color: $color-white;
+    content: "";
+    -webkit-transition: width 0.5s;
+    transition: width 0.5s;
     width: 100%;
   }
 }
