--- a/src/css/pages/_home.scss
+++ b/src/css/pages/_home.scss
@@ -46,6 +46,13 @@
   }
 }
 
+.section-imprint {
+  background-color: $color-white;
+  height: 50rem;
+  position: relative;
+  max-width: 100%;
+}
+
 .section-gallery {
   background-color: $color-white;
   padding-bottom: 2rem;
