--- a/src/css/components/_navigation.scss
+++ b/src/css/components/_navigation.scss
@@ -9,17 +9,23 @@
   padding: 2rem;
   z-index: 9;
   transition: background-color 0.4s ease-out;
+
+  &-menu {
+    text-decoration: none;
+    color: $color-white;
+    background-color: transparent;
+    font-family: "Roboto", sans-serif;
+    font-size: 1.8rem;
+    padding: 0 3rem;
+    list-style: none;
+    display: inline;
+  }
 }
 
-.nav-menu {
-  text-decoration: none;
-  color: $color-white;
-  background-color: transparent;
-  font-family: "Roboto", sans-serif;
-  font-size: 1.8rem;
-  padding: 0 3rem;
-  list-style: none;
-  display: inline;
+.navbar-fixed-top.scrolled {
+  background-color: $color-white !important;
+  color: $color-anthrazit;
+  transition: background-color 200ms linear;
 }
 
 .link-underline {
@@ -58,6 +64,79 @@
     width: 0;
     height: 1px;
     background-color: $color-white;
+    content: "";
+    -webkit-transition: width 0.5s;
+    transition: width 0.5s;
+    width: 100%;
+  }
+}
+
+.navb {
+  position: fixed;
+  line-height: 2;
+  width: 100%;
+  color: $color-black;
+  background-color: transparent;
+  display: flex;
+  flex-flow: row-reverse;
+  padding: 2rem;
+  z-index: 9;
+  transition: background-color 0.4s ease-out;
+
+  &-menu {
+    text-decoration: none;
+    color: $color-black;
+    background-color: transparent;
+    font-family: "Roboto", sans-serif;
+    font-size: 1.8rem;
+    padding: 0 3rem;
+    list-style: none;
+    display: inline;
+  }
+}
+
+.navbar-fixed-top.scrolled {
+  background-color: $color-white !important;
+  color: $color-anthrazit;
+  transition: background-color 200ms linear;
+}
+
+.linkb-underline {
+  position: relative;
+  color: $color-black;
+  text-decoration: none;
+
+  &:after {
+    display: block;
+    position: absolute;
+    left: 0;
+    bottom: -5px;
+    width: 0;
+    height: 1px;
+    background-color: $color-black;
+    content: "";
+    -webkit-transition: width 0.5s;
+    transition: width 0.5s;
+  }
+
+  &:hover:after {
+    width: 100%;
+  }
+}
+
+.linkb-underlined {
+  position: relative;
+  color: $color-black;
+  text-decoration: none;
+
+  &:after {
+    display: block;
+    position: absolute;
+    left: 0;
+    bottom: -5px;
+    width: 0;
+    height: 1px;
+    background-color: $color-black;
     content: "";
     -webkit-transition: width 0.5s;
     transition: width 0.5s;
