--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -15,7 +15,9 @@
 @import "components/navigation";
 
 @import "layout/footer";
-@import "layout/grid";
+@import "layout/grid-about";
+@import "layout/grid-footer";
+@import "layout/grid-origin";
 @import "layout/header";
 
 @import "pages/home";
