--- a/src/css/layout/_grid-origin.scss
+++ b/src/css/layout/_grid-origin.scss
@@ -1,9 +1,17 @@
-.row {
+.Orow {
   max-width: $grid-width;
   margin: 5rem auto;
 
   &:not(:last-child) {
     margin-bottom: $gutter-vertical;
+
+    @include respond(tab-port) {
+      margin-bottom: $gutter-vertical-small;
+    }
+  }
+
+  @include respond(tab-port) {
+    max-width: 50rem;
   }
 
   @include clearfix;
@@ -13,40 +21,48 @@
 
     &:not(:last-child) {
       margin-right: $gutter-horizontal;
+
+      @include respond(tab-port) {
+        margin-right: 0;
+        margin-bottom: $gutter-vertical-small;
+      }
+    }
+    @include respond(tab-port) {
+      width: 50% !important;
     }
   }
 
-  .col-1-of-2 {
+  .Ocol-1-of-2 {
     width: calc((100% - #{$gutter-horizontal}) / 2);
   }
 
-  .col-1-of-3 {
+  .Ocol-1-of-3 {
     width: calc((100% - 2 * #{$gutter-horizontal}) / 3);
   }
 
-  .col-2-of-3 {
+  .Ocol-2-of-3 {
     width: calc(
       2 * ((100% - 2 * #{$gutter-horizontal}) / 3) + #{$gutter-horizontal}
     );
   }
 
-  .col-1-of-4 {
+  .Ocol-1-of-4 {
     width: calc((100% - 3 * #{$gutter-horizontal}) / 4);
   }
 
-  .col-2-of-4 {
+  .Ocol-2-of-4 {
     width: calc(
       2 * ((100% - 3 * #{$gutter-horizontal}) / 4) + #{$gutter-horizontal}
     );
   }
 
-  .col-3-of-4 {
+  .Ocol-3-of-4 {
     width: calc(
       3 * ((100% - 3 * #{$gutter-horizontal}) / 4) + 2 * #{$gutter-horizontal}
     );
   }
 
-  .col-1-of-8 {
+  .Ocol-1-of-8 {
     width: calc((100% - 7 * #{$gutter-horizontal}) / 8);
   }
 }
