optimize responsive behavior with paddings

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -8,16 +8,13 @@
 @import "base/utilities";
 
 @import "components/button";
-@import "components/hero";
 @import "components/images";
 @import "components/info";
 @import "components/map";
 @import "components/navigation";
 
 @import "layout/footer";
-@import "layout/grid-about";
-@import "layout/grid-footer";
-@import "layout/grid-origin";
+@import "layout/grid";
 @import "layout/header";
 
 @import "pages/home";
