--- a/src/css/layout/_grid.scss
+++ b/src/css/layout/_grid.scss
@@ -1,6 +1,10 @@
-.Orow {
-  max-width: $grid-width;
+.row {
+  max-width: 100%;
   margin: 5rem auto;
+
+  @include respond(tab-port) {
+    margin: 0 auto;
+  }
 
   &:not(:last-child) {
     margin-bottom: $gutter-vertical;
@@ -11,7 +15,7 @@
   }
 
   @include respond(tab-port) {
-    max-width: 50rem;
+    max-width: 75rem;
   }
 
   @include clearfix;
@@ -24,45 +28,46 @@
 
       @include respond(tab-port) {
         margin-right: 0;
-        margin-bottom: $gutter-vertical-small;
+        margin-bottom: 0;
       }
     }
+
     @include respond(tab-port) {
       width: 50% !important;
     }
   }
 
-  .Ocol-1-of-2 {
+  .col-1-of-2 {
     width: calc((100% - #{$gutter-horizontal}) / 2);
   }
 
-  .Ocol-1-of-3 {
+  .col-1-of-3 {
     width: calc((100% - 2 * #{$gutter-horizontal}) / 3);
   }
 
-  .Ocol-2-of-3 {
+  .col-2-of-3 {
     width: calc(
       2 * ((100% - 2 * #{$gutter-horizontal}) / 3) + #{$gutter-horizontal}
     );
   }
 
-  .Ocol-1-of-4 {
+  .col-1-of-4 {
     width: calc((100% - 3 * #{$gutter-horizontal}) / 4);
   }
 
-  .Ocol-2-of-4 {
+  .col-2-of-4 {
     width: calc(
       2 * ((100% - 3 * #{$gutter-horizontal}) / 4) + #{$gutter-horizontal}
     );
   }
 
-  .Ocol-3-of-4 {
+  .col-3-of-4 {
     width: calc(
       3 * ((100% - 3 * #{$gutter-horizontal}) / 4) + 2 * #{$gutter-horizontal}
     );
   }
 
-  .Ocol-1-of-8 {
+  .col-1-of-8 {
     width: calc((100% - 7 * #{$gutter-horizontal}) / 8);
   }
 }
