--- a/src/css/pages/_home.scss
+++ b/src/css/pages/_home.scss
@@ -59,6 +59,11 @@
   position: relative;
   max-width: 100%;
 
+  @include respond(tab-port) {
+    width: 100%;
+    padding-bottom: 0;
+  }
+
   &__text-box {
     position: absolute;
     left: 50%;
@@ -75,6 +80,37 @@
 
 .section-footer {
   background-color: $color-black;
-  padding: 10rem;
+  padding-top: 10rem;
+  padding-bottom: 10rem;
   margin: 0;
+
+  @include respond(tab-port) {
+    padding: 5rem;
+  }
+}
+
+.push-container {
+  padding-left: 10rem;
+  padding-right: 10rem;
+
+  @include respond(tab-port) {
+    padding-left: 5rem;
+    padding-right: 5rem;
+  }
+}
+
+.center-container {
+  align-items: center;
+  padding-left: 20rem;
+  padding-right: 20rem;
+
+  @include respond(tab-port) {
+    padding-left: 10rem;
+    padding-right: 10rem;
+  }
+
+  @include respond(tab-land) {
+    padding-left: 15rem;
+    padding-right: 15rem;
+  }
 }
