--- a/src/css/layout/_header.scss
+++ b/src/css/layout/_header.scss
@@ -101,3 +101,30 @@
     text-align: center;
   }
 }
+
+.header-shop {
+  height: 65vh;
+  background-image: url(../img/FEND-Coffee-sign.png);
+  background-size: cover;
+  background-position: top;
+
+  position: relative;
+
+  &__logo-box {
+    position: absolute;
+    left: 10rem;
+  }
+
+  &__logo {
+    height: 3.5rem;
+    margin-right: auto;
+  }
+
+  &__text-box {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+  }
+}
