--- a/src/css/layout/_grid.scss
+++ b/src/css/layout/_grid.scss
@@ -1,6 +1,8 @@
 .row {
   max-width: 100%;
   margin: 5rem auto;
+  display: flex;
+  flex-wrap: wrap;
 
   @include respond(tab-port) {
     margin: 0 auto;
