add links and comments

--- a/src/css/components/_navigation.scss
+++ b/src/css/components/_navigation.scss
@@ -80,6 +80,8 @@
 }
 */
 
+//https://www.taniarascia.com/responsive-dropdown-navigation-bar/
+
 .overlay-content a {
   padding: 8px;
   text-decoration: none;
