--- a/src/css/base/_typography.scss
+++ b/src/css/base/_typography.scss
@@ -160,6 +160,14 @@ body {
   margin-top: -2rem;
   &__footer,
   &__origin {
+    &--black {
+      font-size: 1.4rem;
+      line-height: 1.8;
+      font-weight: 400;
+      text-decoration: none;
+      color: $color-black;
+      display: block;
+    }
     &--white {
       font-size: 1.4rem;
       line-height: 1.8;
