--- a/src/css/pages/_home.scss
+++ b/src/css/pages/_home.scss
@@ -122,3 +122,11 @@
     padding: 22rem 20rem 22rem 20rem;
   }
 }
+
+.section-contact {
+  background-color: $color-white;
+  padding-top: 10rem;
+  padding-bottom: 10rem;
+  position: relative;
+  max-width: 100%;
+}
