--- a/src/css/pages/_home.scss
+++ b/src/css/pages/_home.scss
@@ -48,7 +48,7 @@
 
 .section-gallery {
   background-color: $color-white;
-  padding-bottom: 2rem;
+  padding-bottom: 0;
   position: relative;
   max-width: 100%;
 
