--- a/src/css/layout/_grid.scss
+++ b/src/css/layout/_grid.scss
@@ -26,7 +26,7 @@
     float: left;
 
     &:not(:last-child) {
-      margin-right: $gutter-horizontal;
+      margin-right: $gutter-horizontal-small;
 
       @include respond(tab-port) {
         margin-right: 0;
@@ -54,7 +54,7 @@
   }
 
   .col-1-of-4 {
-    width: calc((100% - 3 * #{$gutter-horizontal}) / 4);
+    width: calc((100% - 3 * #{$gutter-horizontal-small}) / 4);
   }
 
   .col-2-of-4 {
