--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -8,6 +8,7 @@
 @import "base/utilities";
 
 @import "components/button";
+@import "components/checkbox";
 @import "components/form";
 @import "components/images";
 @import "components/info";
