add checkbox and select

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -9,6 +9,7 @@
 
 @import "components/button";
 @import "components/checkbox";
+@import "components/dropdown";
 @import "components/form";
 @import "components/images";
 @import "components/info";
