--- a/src/css/components/_dropdown.scss
+++ b/src/css/components/_dropdown.scss
@@ -7,11 +7,11 @@ select {
   height: 50px;
   width: 300px;
   font: inherit;
+  font-size: 1.8rem;
   line-height: 1.5em;
   padding: 0.5em 3.5em 0.5em 1em;
 
   /* reset */
-
   margin: 0;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -20,22 +20,21 @@ select {
   -moz-appearance: none;
 }
 
-/* arrows */
-
 select.classic {
-  background-image: linear-gradient(45deg, transparent 50%, $color-black 50%),
-    linear-gradient(135deg, $color-black 50%, transparent 50%),
-    linear-gradient(to right, skyblue, skyblue);
+  background-image: linear-gradient(45deg, transparent 50%, $color-white 50%),
+    linear-gradient(135deg, $color-white 50%, transparent 50%),
+    linear-gradient(to right, $color-black, $color-black);
   background-position: calc(100% - 20px) calc(1em + 2px),
     calc(100% - 15px) calc(1em + 2px), 100% 0;
   background-size: 5px 5px, 5px 5px, 2.5em 2.5em;
   background-repeat: no-repeat;
+  height: auto;
 }
 
 select.classic:focus {
   background-image: linear-gradient(45deg, white 50%, transparent 50%),
     linear-gradient(135deg, transparent 50%, white 50%),
-    linear-gradient(to right, gray, gray);
+    linear-gradient(to right, $color-grey-medium, $color-grey-medium);
   background-position: calc(100% - 15px) 1em, calc(100% - 20px) 1em, 100% 0;
   background-size: 5px 5px, 5px 5px, 2.5em 2.5em;
   background-repeat: no-repeat;
@@ -43,6 +42,7 @@ select.classic:focus {
   outline: 0;
 }
 
+/*
 select.minimal {
   background-image: linear-gradient(45deg, transparent 50%, gray 50%),
     linear-gradient(135deg, gray 50%, transparent 50%),
@@ -64,6 +64,7 @@ select.minimal:focus {
   border-color: $color-black;
   outline: 0;
 }
+*/
 
 select:-moz-focusring {
   color: transparent;
