--- a/src/css/layout/_header.scss
+++ b/src/css/layout/_header.scss
@@ -1,5 +1,5 @@
 .header {
-  height: 65vh;
+  height: 75vh;
   background-image: linear-gradient(
       0deg,
       rgba(0, 0, 0, 0.3),
@@ -26,6 +26,10 @@
   &__logo {
     height: 3.5rem;
     margin-right: auto;
+
+    @include respond(tab-port) {
+      height: 5rem;
+    }
   }
 
   &__text-box {
@@ -85,33 +89,6 @@
 .header-origin {
   height: 65vh;
   background-image: url(../img/FEND-Coffee-beans-hand-2.png);
-  background-size: cover;
-  background-position: top;
-
-  position: relative;
-
-  &__logo-box {
-    position: absolute;
-    left: 10rem;
-  }
-
-  &__logo {
-    height: 3.5rem;
-    margin-right: auto;
-  }
-
-  &__text-box {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-  }
-}
-
-.header-shop {
-  height: 65vh;
-  background-image: url(../img/FEND-Coffee-sign.png);
   background-size: cover;
   background-position: top;
 
