--- a/src/css/components/_form.scss
+++ b/src/css/components/_form.scss
@@ -50,3 +50,17 @@
     font-weight: 400;
   }
 }
+
+.textarea {
+  display: block;
+  width: 100%;
+  overflow: hidden;
+  resize: both;
+  min-height: 40px;
+  line-height: 20px;
+}
+
+.textarea[contenteditable]:empty::before {
+  content: "Was hast du auf dem Herzen ?";
+  color: gray;
+}
