--- a/src/css/components/_navigation.scss
+++ b/src/css/components/_navigation.scss
@@ -197,3 +197,35 @@
     width: 100%;
   }
 }
+
+.nav-mobile {
+  align-items: center;
+  background-color: #000;
+  justify-content: center;
+  position: fixed;
+  left: 0;
+  height: 100vh;
+  top: 0;
+  width: 100%;
+  transform: translate3d(100%, 0, 0);
+  transition: transform 0.5s ease-in;
+  z-index: 9999;
+
+  &.open {
+    transform: translate3d(0, 0, 0);
+  }
+
+  ul {
+    list-style-type: none;
+    li {
+      a {
+        color: #fff;
+        text-decoration: none;
+      }
+    }
+  }
+
+  @include respond(tab-port) {
+    display: flex;
+  }
+}
