--- a/src/css/base/_typography.scss
+++ b/src/css/base/_typography.scss
@@ -1,7 +1,7 @@
 body {
   font-family: "Roboto", sans-serif;
   font-weight: 400;
-  line-height: 1.1%;
+  line-height: 1.1;
   color: $color-white;
   text-transform: none;
   text-decoration: none;
