--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -11,6 +11,7 @@
 @import "components/checkbox";
 @import "components/dropdown";
 @import "components/form";
+@import "components/hamburger";
 @import "components/images";
 @import "components/info";
 @import "components/map";
