--- a/src/css/components/_button.scss
+++ b/src/css/components/_button.scss
@@ -1,3 +1,13 @@
+button {
+  background: none;
+  color: inherit;
+  border: none;
+  padding: 0;
+  font: inherit;
+  cursor: pointer;
+  outline: inherit;
+}
+
 .btn {
   &:link,
   &:visited {
