--- a/src/css/components/_navigation.scss
+++ b/src/css/components/_navigation.scss
@@ -221,6 +221,8 @@
       a {
         color: #fff;
         text-decoration: none;
+        font-size: 6rem;
+        line-height: 2.2;
       }
     }
   }
